# LibPKMN

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README  README.md  README.txt  index.html  library.html  params.json  poketest.cpp
apps/: CMakeLists.txt
apps/cpp/: CMakeLists.txt
apps/cpp/get_type_stats/: CMakeLists.txt  CalculationOutput.cpp  CalculationOutput.hpp  GetTypeStatsWindow.cpp  GetTypeStatsWindow.hpp  (+3 more)
apps/damage_calculator/: CMakeLists.txt  damage_calculator.cpp
apps/get_type_stats/: BasePokemonDisplayWidget.cpp  BasePokemonDisplayWidget.hpp  CMakeLists.txt  CalculationOutput.cpp  CalculationOutput.hpp  GetTypeStatsWindow.cpp  GetTypeStatsWindow.hpp  OptionsGroupBox.cpp  OptionsGroupBox.hpp  get_type_stats.cpp  get_type_stats_gui.cpp  type_stats_common.cpp  type_stats_common.hpp
apps/python/: CMakeLists.txt
apps/team_analysis/: CMakeLists.txt  team_analysis.cpp  team_analysis_common.hpp
docs/: CMakeLists.txt  Doxyfile.in  Doxyfile_cpp.in  Doxyfile_cs.in  Doxyfile_java.in
include/: CMakeLists.txt  base_pkmn.hpp
include/pkmn/: CMakeLists.txt  bag.hpp  base_pokemon.hpp  build_info.hpp  calculations.hpp  config.hpp  enums.hpp  game_save.hpp  io.hpp  item.hpp  lists.hpp  move.hpp  nature.hpp  paths.hpp  pocket.hpp  team_pokemon.hpp  trainer.hpp
include/pkmnsim/: CMakeLists.txt  analysis.hpp  bag.hpp  base_gen1pkmn.hpp  base_gen2pkmn.hpp  base_move.hpp  base_pkmn.hpp  base_pokemon.hpp  calculations.hpp  config.hpp  conversions.hpp  dict.hpp  dict.ipp  enums.hpp  game_save.hpp  globals.hpp  io.hpp  item.hpp  lists.hpp  move.hpp  paths.hpp  pkmn_nature.hpp  pkmn_natures.hpp  pkmn_types.hpp  pocket.hpp  pokedex.hpp  spec_gen1pkmn.hpp  spec_gen2pkmn.hpp  spec_pkmn.hpp  spec_pokemon.hpp  stat_analysis.hpp  team_pokemon.hpp  trainer.hpp  vla.hpp  vla.ipp
include/sqlitecpp/: CMakeLists.txt  Column.h  Config.h  Database.h  Exception.h  SQLiteC++.h  SQLiteCPP.h  Statement.h  Transaction.h
lib/: .gitignore  CMakeLists.txt  Makefile  analysis.cpp  bag_impl.cpp  bag_impl.hpp  base_gen1pkmn.cpp  base_gen2pkmn.cpp  base_move.cpp  base_move_mainimpl.cpp  base_move_mainimpl.hpp  base_pkmn.cpp  base_pkmn_gen1impl.cpp  base_pkmn_gen1impl.hpp  base_pkmn_gen2impl.cpp  base_pkmn_gen2impl.hpp  base_pkmn_gen345impl.cpp  base_pkmn_gen345impl.hpp  base_pkmn_gen3impl.cpp  base_pkmn_gen3impl.hpp  base_pokemon.cpp  base_pokemon_gen1impl.cpp  base_pokemon_gen1impl.hpp  base_pokemon_gen2impl.cpp  base_pokemon_gen2impl.hpp  base_pokemon_gen345impl.cpp  base_pokemon_gen345impl.hpp  base_pokemon_impl.cpp  base_pokemon_impl.hpp  base_pokemon_modernimpl.cpp  base_pokemon_modernimpl.hpp  build_info.cpp.in  calculations.cpp  conversions.cpp  conversions.hpp  copy_sptrs.cpp  copy_sptrs.hpp  evolutions.cpp  files.cpp  game_save.cpp  (+91 more)
lib/PKMDS/: pkmds_g5.cpp  pkmds_g5.h  pkmds_g5_sqlite.cpp  pkmds_g5_sqlite.h  pkmds_vector.cpp  pkmds_vector.h  pokeprng.h  stdafx.h
lib/PokeLib/: Box.cpp  CMakeLists.txt  PRNG.cpp  Party.cpp  PokeText.cpp  Pokedex.cpp  Pokemon.cpp  Pokemon.h  Save.cpp  Toolkit.h  Trainer.cpp  Trainer.h  internal.h
lib/SQLiteCpp/: CMakeLists.txt  Column.h
lib/analysis/: damage.cpp  stats.cpp
lib/conversions/: PokeText.cpp  PokeText.h  items.cpp  items.hpp  pksql.cpp  pksql.hpp  pokemon.cpp  pokemon.hpp  trainer.cpp  trainer.hpp  trainer_gen3impl.cpp  trainer_gen3impl.hpp  trainer_gen4impl.cpp  trainer_gen5impl.cpp  trainer_gen5impl.hpp
lib/database/: lists.cpp  queries.cpp
lib/libspec/: CMakeLists.txt  checksum.c  game_gba.c  game_gba.h  stat.c  stat.h  types.h
lib/pokehack/: SaveParser.cpp  SaveParser.h  attacks.cpp  items.cpp  misc.cpp  parsesav.c  parsesav.cpp  pokemon_species.cpp  pokestructs.h
lib/qt/: AbilitiesComboBox.cpp  AboutMessageBox.cpp.in  GamesComboBox.cpp  NaturesComboBox.cpp  PokemonListComboBox.cpp  TypesComboBox.cpp
lib/qt4/: AbilitiesComboBox.cpp  AbilitiesComboBox.hpp  AboutMessageBox.cpp.in  AboutMessageBox.hpp  BasePkmnDisplayWidget.cpp  BasePkmnDisplayWidget.hpp  BasePokemonDisplayWidget.cpp  BasePokemonDisplayWidget.hpp  CMakeLists.txt  GamesComboBox.cpp  GamesComboBox.hpp  NaturesComboBox.cpp  NaturesComboBox.hpp  PokemonListComboBox.cpp  PokemonListComboBox.hpp  SpecPkmnDisplayWidget.cpp  SpecPkmnDisplayWidget.hpp  TeamPokemonDisplayWidget.cpp  TeamPokemonDisplayWidget.hpp  TypesComboBox.cpp  TypesComboBox.hpp  VersionsComboBox.cpp
lib/qt4_classes/: BasePkmnDisplayWidget.cpp  BasePkmnDisplayWidget.hpp  CMakeLists.txt  GamesComboBox.cpp  GamesComboBox.hpp  PokemonDisplayWidget.cpp  PokemonDisplayWidget.hpp  SpecPkmnDisplayWidget.cpp  SpecPkmnDisplayWidget.hpp  TypesComboBox.cpp  TypesComboBox.hpp
lib/sqlitecpp/: Column.cpp  Column.h  Database.cpp  Database.h  Statement.cpp  Statement.h  Transaction.cpp
lib/swig/: CMakeLists.txt  CamelCase.i  libpkmn.i  pkmnsim.i  pkmnsim_swig_functions.cpp  pkmnsim_swig_functions.hpp
share/libpkmn/: CMakeLists.txt  database_concat.py.in  libpkmn_db_additions
share/pkmnsim/: CMakeLists.txt  pkmnsim_db_dump  pokedex.db  pokedex_dump
swig/: CMakeLists.txt  pkmnsim.i  pkmnsim_std_shared_ptr.i
swig/python/: CMakeLists.txt  PyPKMNsim.i  pypkmnsim.i
tests/: CMakeLists.txt  CSharpBagPocketTest.cs  CSharpCopySPtrTest.cs  CSharpDictTest.cs  CSharpPokemonTextTest.cs  JavaBagPocketTest.java  JavaCopySPtrTest.java  JavaDictTest.java  bag_pocket_test.cpp  copy_sptr_test.cpp  cs_unit_test_template.bat.in  cs_unit_test_template.sh.in  database_test.cpp  db_additions_test.cpp  dict_test.cpp  java_unit_test_template.bat.in  java_unit_test_template.sh.in  old_values_test.cpp  pokelib-nc_test.cpp  pokemon_text_test.cpp  prng_test.cpp  python_bag_pocket_test.py  python_copy_sptr_test.py  python_dict_test.py  python_dict_test.sh.in  python_enum_test.py  python_enum_test.sh.in  python_pkmn_array_test.py  python_pokemon_text_test.py  python_test_template.sh.in  python_unit_test_template.bat.in  to_pokelib-nc_test.cpp  unit_test_template.bat.in  unit_test_template.sh.in  vla_test.cpp
utils/: CMakeLists.txt  libpkmn-about.cpp  libpkmn-config-info.cpp.in  pkmnsim-config-info.cpp.in
(+337 files in other folders)
