#
# Copyright (c) 2013 Nicholas Corgan (n.corgan@gmail.com)
#
# Distributed under the MIT License (MIT) (See accompanying file LICENSE.txt
# or copy at http://opensource.org/licenses/MIT)
#

IF(ENABLE_APPS)
    #ADD_SUBDIRECTORY(get_type_stats)
    #ADD_SUBDIRECTORY(team_analysis)
    ADD_SUBDIRECTORY(damage_calculator)
ENDIF(ENABLE_APPS)
