#
# Copyright (c) 2013 Nicholas Corgan (n.corgan@gmail.com)
#
# Distributed under the MIT License (MIT) (See accompanying file LICENSE.txt
# or copy at http://opensource.org/licenses/MIT)
#

FIND_PACKAGE(Doxygen)

PKMNSIM_REGISTER_COMPONENT("Doxygen - API Documentation" ENABLE_DOXYGEN ON "DOXYGEN_FOUND" OFF)